// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "data": {
    "p_name": "NewProduct02",
    "price": 750,
  },
  "message": "Product created successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /get/:id endpoints 1`] = `
{
  "data": {
    "created_at": "2023-03-13T08:31:51.000Z",
    "id": 33,
    "p_name": "NewProduct02",
    "price": "510",
    "status": 1,
    "updated_at": "2023-03-13T08:31:51.000Z",
  },
  "message": "Product fetched successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /get-all endpoints 1`] = `
{
  "data": [
    {
      "created_at": "2023-03-13T06:52:44.000Z",
      "id": 2,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T06:53:56.000Z",
      "id": 3,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T06:55:57.000Z",
      "id": 4,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T06:58:27.000Z",
      "id": 5,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:00:32.000Z",
      "id": 6,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:04:51.000Z",
      "id": 7,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:05:43.000Z",
      "id": 8,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:07:21.000Z",
      "id": 9,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:08:02.000Z",
      "id": 10,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:12:44.000Z",
      "id": 11,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:13:17.000Z",
      "id": 12,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:15:09.000Z",
      "id": 13,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:15:46.000Z",
      "id": 14,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:17:42.000Z",
      "id": 15,
      "p_name": "NewProduct02",
      "price": "750",
      "status": 1,
      "updated_at": null,
    },
    {
      "created_at": "2023-03-13T07:20:56.000Z",
      "id": 16,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T07:20:56.000Z",
    },
    {
      "created_at": "2023-03-13T07:22:50.000Z",
      "id": 17,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T07:22:50.000Z",
    },
    {
      "created_at": "2023-03-13T07:24:36.000Z",
      "id": 18,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T07:24:36.000Z",
    },
    {
      "created_at": "2023-03-13T08:21:58.000Z",
      "id": 26,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T08:21:58.000Z",
    },
    {
      "created_at": "2023-03-13T08:22:26.000Z",
      "id": 27,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T08:22:26.000Z",
    },
    {
      "created_at": "2023-03-13T08:27:42.000Z",
      "id": 30,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T08:27:42.000Z",
    },
    {
      "created_at": "2023-03-13T08:31:51.000Z",
      "id": 33,
      "p_name": "NewProduct02",
      "price": "510",
      "status": 1,
      "updated_at": "2023-03-13T08:31:51.000Z",
    },
  ],
  "message": "Product fetched successfully!",
  "status": "success",
  "status_code": 200,
}
`;

exports[`api test suite tests /updateProduct/:id endpoints 1`] = `
{
  "data": {
    "id": "33",
    "p_name": "ProductNameUpdated",
    "price": 510,
    "updated_at": "2023-03-13 08:31:51",
  },
  "message": "Product updated successfully!",
  "status": "success",
  "status_code": 200,
}
`;
